--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,11 @@
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  username: postgres
+  password:
+  pool: 5
+  host: db
+
 development:
   host: localhost
   adapter: postgresql
@@ -22,11 +30,5 @@ test:
   port: 5432
 
 production:
-  host: localhost
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: crypto_production
-  pool: 5
-  username: postgres
-  password: postgres
-  port: 5432
