nginx name conflict issue fix

--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -19,7 +19,7 @@ http {
 
     location / {
         root /Users/manish/crypto_currencies/public;
-        index index.html index.htm index.rb;
+        index nginx.html index.htm index.rb;
     }
    }
 }
